feat(i18n): add vue-i18n and language switch (#6)
closes: #1

--- a/generators/component/component.vue.hbs
+++ b/generators/component/component.vue.hbs
@@ -5,8 +5,8 @@
 </template>
 
 <script lang="ts">
-  import Vue from "vue";
-  import Component from "vue-class-component";
+  import Vue from 'vue';
+  import Component from 'vue-class-component';
 
   @Component({})
   class {{properCase componentName}} extends Vue {
