--- a/generators/connected/connected.spec.ts.hbs
+++ b/generators/connected/connected.spec.ts.hbs
@@ -1,6 +1,7 @@
 import { mount, createLocalVue } from 'vue-test-utils';
 import Vuex from 'vuex';
 import {{properCase componentName}} from './{{properCase componentName}}.vue';
+import $style from 'identity-obj-proxy';
 
 const localVue = createLocalVue();
 
@@ -14,7 +15,7 @@ describe('{{properCase componentName}}.vue', () => {
         get{{properCase moduleName}}: () => [],
       },
     });
-    const wrapper = mount({{properCase componentName}}, { store, localVue });
+    const wrapper = mount({{properCase componentName}}, { store, localVue, mocks: { $style } });
 
     expect(wrapper.find('h1').text()).toBe('{{properCase componentName}}');
   });
