--- a/src/app/index.template.html
+++ b/src/app/index.template.html
@@ -4,8 +4,9 @@
   <meta charset="utf-8">
   <title>vue-starter</title>
   <meta name="mobile-web-app-capable" content="yes">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
-  <meta name="theme-color" content="#f60">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, minimal-ui">
+  <meta name="theme-color" content="#2ecc71">
+  <link rel="manifest" href="/manifest.json">
 </head>
 <body>
 <!--vue-ssr-outlet-->
