--- a/src/app/shared/_variables.scss
+++ b/src/app/shared/_variables.scss
@@ -1,11 +1,12 @@
 /* Brand */
-$brand-dark: #2C3E50;
-$brand-light: #ECF0F1;
-$brand-primary: #2ECC71;
-$brand-accent: #3498DB;
-$brand-warn: #E74C3C;
+$brand-dark: #455A64;
+$brand-light: #FAFAFA;
 
-$gray-light: #BDC3C7;
+$brand-primary: #00C853;
+$brand-accent: #0091EA;
+$brand-warn: #D50000;
+
+$gray-light: #B0BEC5;
 
 /* General */
 $google-font: 'https://fonts.googleapis.com/css?family=Alegreya+Sans';
@@ -64,19 +65,19 @@ $button-shadow: 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px 2px rgba(0, 0, 0, 0.4);
 $button-transition: all 300ms cubic-bezier(.25, .8, .25, 1);
 $button-active-shadow: 0 12px 20px rgba(0, 0, 0, 0.20), 0 10px 10px rgba(0, 0, 0, 0.18);
 
-$button-default-color: $brand-dark;
-$button-default-bg: lighten($gray-light, 10%);
+$button-default-color: #000;
+$button-default-bg: $gray-light;
 $button-default-hover-bg: $button-default-bg;
 
-$button-primary-color: $brand-light;
+$button-primary-color: #000;
 $button-primary-bg: $brand-primary;
 $button-primary-hover-bg: $button-primary-bg;
 
-$button-accent-color: $brand-light;
+$button-accent-color: #000;
 $button-accent-bg: $brand-accent;
 $button-accent-hover-bg: $button-accent-bg;
 
-$button-warn-color: $brand-light;
+$button-warn-color: #FFF;
 $button-warn-bg: $brand-warn;
 $button-warn-hover-bg: $button-warn-bg;
 
