--- a/generators/module/routes.ts.hbs
+++ b/generators/module/routes.ts.hbs
@@ -1,3 +1,3 @@
-export default [
+export const {{ camelCase moduleName }}Routes = [
   { path: '/{{ camelCase moduleName }}', component: () => import('./{{ properCase moduleName }}/{{ properCase moduleName }}.vue').then(m => m.default) },
 ];
