feat(SEO): add vue-meta to manipulate html-header tags and attributes (#10)
closes: #2

--- a/src/app/index.template.html
+++ b/src/app/index.template.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html data-vue-meta-server-rendered {{{ meta.inject().htmlAttrs.text() }}}>
 <head>
+  {{{ meta.inject().meta.text() }}}
+  {{{ meta.inject().title.text() }}}
+  {{{ meta.inject().link.text() }}}
+  {{{ meta.inject().style.text() }}}
+  {{{ meta.inject().script.text() }}}
+  {{{ meta.inject().noscript.text() }}}
   <meta charset="utf-8">
   <title>vue-starter</title>
   <meta name="mobile-web-app-capable" content="yes">
