feat(components): add collapse, add modal, refine navbar (#11)

--- a/generators/component/component.vue.hbs
+++ b/generators/component/component.vue.hbs
@@ -6,21 +6,15 @@
 
 <script lang="ts">
   export default {
-    components: {
-
-    },
+    components: {},
     props: {
 
     },
-    data: function () {
+    data () {
       return {};
     },
-    computed: {
-
-    },
-    methods: {
-
-    },
+    computed: {},
+    methods: {},
   };
 </script>
 
