--- a/src/app/index.template.html
+++ b/src/app/index.template.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-vue-meta-server-rendered {{{ meta.inject().htmlAttrs.text() }}}>
+<html lang="en" data-vue-meta-server-rendered {{{ meta.inject().htmlAttrs.text() }}}>
 <head>
   {{{ meta.inject().meta.text() }}}
   {{{ meta.inject().title.text() }}}
@@ -13,6 +13,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, minimal-ui">
   <meta name="theme-color" content="#2ecc71">
   <link rel="manifest" href="/manifest.json">
+  <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
+  <% for (var chunk of webpack.chunks) {
+  for (var file of chunk.files) {
+  if (file.match(/\.(js|css)$/)) { %>
+  <link rel="<%= chunk.initial?'preload':'prefetch' %>" href="<%= htmlWebpackPlugin.files.publicPath + file %>" as="<%= file.match(/\.css$/)?'style':'script' %>"><% }}} %>
 </head>
 <body>
 <!--vue-ssr-outlet-->
