feat(components): add first version of tab component

--- a/generators/connected/connected.vue.hbs
+++ b/generators/connected/connected.vue.hbs
@@ -13,7 +13,7 @@
   export default {
     components: {},
     props: {},
-    data () {
+    data(): any {
       return {};
     },
     computed: {
