--- a/src/app/shared/_variables.scss
+++ b/src/app/shared/_variables.scss
@@ -153,3 +153,24 @@ $modal-padding: $grid-unit * 3;
 $modal-index: 2001;
 $modal-bg: $nav-bar-bg;
 $modal-max-width: 480px;
+
+/* Footer */
+$footer-padding: $grid-unit * 2 0 $grid-unit * 2 0;
+$footer-bg: linear-gradient(to bottom, darken($text-color, 3%) 0%, $text-color 50%, darken($text-color, 3%) 100%);
+$footer-color: $bg-color;
+
+/* Tabs */
+$tab-group-bg: $panel-bg;
+$tab-group-shadow: $nav-bar-shadow;
+$tab-group-padding: 0 $grid-unit * 2 $grid-unit * 2;
+$tab-group-margin: $grid-unit * 4 0 0 0;
+
+$tab-group-header-bg: $panel-bg;
+$tab-group-header-shadow: $nav-bar-shadow;
+
+$tab-group-header-item-padding: $grid-unit * 1.5 $grid-unit $grid-unit;
+$tab-group-header-item-border-left: 1px solid lighten($panel-bg, 2%);
+$tab-group-header-item-border-right: 1px solid darken($panel-bg, 2%);
+$tab-group-header-item-hover-bg: $brand-primary;
+
+$tab-item-transition: transform 250ms linear;
