--- a/generators/component/component.spec.ts.hbs
+++ b/generators/component/component.spec.ts.hbs
@@ -1,4 +1,4 @@
-import { mount, createLocalVue } from 'vue-test-utils';
+import { mount, createLocalVue } from '@vue/test-utils';
 import {{ properCase componentName }} from './{{ properCase componentName }}.vue';
 import $style from 'identity-obj-proxy';
 
