feat(i18n): set defaultLang from acceptLanguage or cookie (#33)

--- a/src/app/index.template.html
+++ b/src/app/index.template.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-vue-meta-server-rendered {{{ meta.inject().htmlAttrs.text() }}}>
+<html lang="{{ htmlLang }}" data-vue-meta-server-rendered {{{ meta.inject().htmlAttrs.text() }}}>
 <head>
   {{{ meta.inject().meta.text() }}}
   {{{ meta.inject().title.text() }}}
