--- a/src/app/index.template.html
+++ b/src/app/index.template.html
@@ -13,7 +13,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, minimal-ui">
   <meta name="theme-color" content="#2ecc71">
   <link rel="manifest" href="/manifest.json">
-  <link rel="preload" id="fa" href="https://use.fontawesome.com/releases/v5.0.2/css/all.css" onload="document.querySelector('#fa').rel='stylesheet';" as="style">
+  <link href="https://use.fontawesome.com/releases/v5.0.2/css/all.css" rel="stylesheet">
   <% for (var chunk of webpack.chunks) {
   for (var file of chunk.files) {
   if (file.match(/\.(js|css)$/)) { %>
