--- a/src/app/index.template.html
+++ b/src/app/index.template.html
@@ -13,7 +13,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, minimal-ui">
   <meta name="theme-color" content="#2ecc71">
   <link rel="manifest" href="/manifest.json">
-  <link href="https://use.fontawesome.com/releases/v5.0.2/css/all.css" rel="stylesheet">
+  <script>
+    function loadAsyncStyleSheets () {
+      for (var e = document.getElementsByTagName('head')[0], t = ['https://use.fontawesome.com/releases/v5.0.2/css/all.css'], s = 0; s < t.length; s++) {
+        var a = document.createElement('link'), l = document.createAttribute('rel'), n = document.createAttribute('href');
+        l.value = 'stylesheet', n.value = t[s], a.setAttributeNode(l), a.setAttributeNode(n), e.appendChild(a);
+      }
+    }
+    window.addEventListener('load', loadAsyncStyleSheets, !1);
+  </script>
   <% for (var chunk of webpack.chunks) {
   for (var file of chunk.files) {
   if (file.match(/\.(js|css)$/)) { %>
