--- a/src/app/shared/styles/_variables.scss
+++ b/src/app/shared/styles/_variables.scss
@@ -13,6 +13,8 @@ $secondary-text-color: #BABABA;
 
 $divider-color: lighten($bg-color, 20%);
 
+$transition-duration: 250ms;
+
 /* General */
 $google-font: 'https://fonts.googleapis.com/css?family=Alegreya+Sans';
 $font-family: 'Alegreya Sans', Helvetica, sans-serif;
@@ -54,8 +56,8 @@ $nav-bar-width: 100%;
 $nav-bar-height: $grid-unit * 10;
 $nav-bar-padding: 0;
 $nav-bar-index: 1000;
-$nav-bar-bg-transition: opacity 250ms ease-in-out;
-$nav-bar-bg-accent-transition: transform 250ms ease-in-out;
+$nav-bar-bg-transition: opacity $transition-duration ease-in-out;
+$nav-bar-bg-accent-transition: transform $transition-duration ease-in-out;
 $nav-bar-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
 $nav-bar-accent-bg: linear-gradient(to left, $brand-dark-primary 0%, $brand-primary 100%);
 $nav-bar-accent-shadow: $nav-bar-shadow;
@@ -173,4 +175,17 @@ $tab-group-header-item-border-left: 1px solid lighten($panel-bg, 2%);
 $tab-group-header-item-border-right: 1px solid darken($panel-bg, 2%);
 $tab-group-header-item-hover-bg: $brand-primary;
 
-$tab-item-transition: transform 250ms linear;
+$tab-item-transition: transform $transition-duration linear;
+
+/* CheckBox */
+
+$checkbox-color: $text-color;
+$checkbox-padding: 0;
+$checkbox-margin: $grid-unit 0;
+$checkbox-size: $grid-unit * 3;
+$checkbox-bg: #FFF;
+$checkbox-transition: background $transition-duration cubic-bezier(0, .84, .83, .67);
+$checkbox-check: 2px solid #FFF;
+$checkbox-check-margin: 0 $grid-unit * 2 0 0;
+$checkbox-checked-bg: $brand-accent;
+$checkbox-shadow: $panel-shadow
