--- a/tools/generators/connected/connected.vue.hbs
+++ b/tools/generators/connected/connected.vue.hbs
@@ -11,6 +11,7 @@
   import { mapGetters } from 'vuex';
 
   export default {
+    name: '{{ properCase componentName }}',
     components: {},
     props: {},
     data(): any {
