--- a/tools/generators/module/actions.ts.hbs
+++ b/tools/generators/module/actions.ts.hbs
@@ -1,9 +1,16 @@
-import request from 'axios';
+import axios from 'axios';
+import { ActionContext } from 'vuex';
+import { IState } from '../mutations';
 
-request.defaults.baseURL = 'https://jsonplaceholder.typicode.com/';
+export interface I{{ properCase moduleName }}Actions {
+  get{{ properCase moduleName }}(context: ActionContext<IState, IState>): void;
+}
 
-export const get{{ properCase moduleName }} = ({ commit, state }: any) => {
-  return request.get('posts').then((response: any) => {
-    commit('{{ upperCase moduleName }}', response.data);
-  });
+export const {{ properCase moduleName }}Actions: I{{ properCase moduleName }}Actions = {
+  get{{ properCase moduleName }}({ commit, state }: ActionContext<IState, IState>) {
+    return axios.get('https://jsonplaceholder.typicode.com/posts')
+      .then((response: any) => {
+        commit('{{ upperCase moduleName }}', response.data);
+      });
+  },
 };
