feat(vuex): add tests for actions, getters and mutations + generators

--- a/tools/generators/component/component.vue.hbs
+++ b/tools/generators/component/component.vue.hbs
@@ -8,9 +8,7 @@
   export default {
     name: '{{ properCase componentName }}',
     components: {},
-    props: {
-
-    },
+    props: {},
     data(): any {
       return {};
     },
