--- a/tools/generators/module/getters.ts.hbs
+++ b/tools/generators/module/getters.ts.hbs
@@ -1,11 +1,11 @@
 import { IState } from '../mutations';
 
 export interface I{{ properCase moduleName }}Getters {
-  get{{ properCase moduleName }}(state: IState): any[];
+  getTopics(state: IState): any[];
 }
 
 export const {{ properCase moduleName }}Getters: I{{ properCase moduleName }}Getters = {
-  get{{ properCase moduleName }}(state: IState): any[] {
-    return state.{{ camelCase moduleName }};
+  getTopics(state: IState): any[] {
+    return state.{{ camelCase moduleName }}.topics;
   },
 };
