feat(components): add calendar, date-picker, date-range-picker
closes #18

--- a/src/app/shared/styles/_mixins.scss
+++ b/src/app/shared/styles/_mixins.scss
@@ -44,6 +44,6 @@ $grid-breakpoints: (
       @content;
     }
   } @else {
-    @error "breakpoint not suuported!"
+    @error "breakpoint not suported!"
   }
 }
