feat(components): add generic form with schema and validations
closes #45

--- a/src/app/shared/styles/_variables.scss
+++ b/src/app/shared/styles/_variables.scss
@@ -123,7 +123,7 @@ $panel-footer-padding: $grid-unit * 2;
 
 /* Input */
 $input-border-bottom: 1px solid $divider-color;
-$input-background-color: $bg-color;
+$input-background-color: transparent;
 $input-padding: $grid-unit 0;
 $input-margin: $grid-unit * 3 0 $grid-unit * 2;
 $input-font-size: $font-size;
