--- a/tools/generators/connected/connected.vue.hbs
+++ b/tools/generators/connected/connected.vue.hbs
@@ -19,9 +19,11 @@
       return {};
     },
     computed:   {
-      ...mapGetters({
-                      topics: 'getTopics',
-                    }),
+      ...mapGetters(
+        {
+          topics: 'getTopics',
+        },
+      ),
     },
     methods:    {},
     prefetch:   (options: IPreLoad) => {
