--- a/tools/generators/module/actions.ts.hbs
+++ b/tools/generators/module/actions.ts.hbs
@@ -3,27 +3,22 @@ import { ActionContext } from 'vuex';
 import { IState } from '../mutations';
 
 export interface I{{ properCase moduleName }}Actions {
-getTopics(context: ActionContext
-<IState, IState>): Promise
-<any>;
-     }
+  getTopics(context: ActionContext<IState, IState>): Promise<any>;
+}
 
-     export const {{ properCase moduleName }}Actions: I{{ properCase moduleName }}Actions = {
-     getTopics({ commit, state }: ActionContext
-  <IState
-     , IState>): Promise
-  <any> {
-        if (state.{{ camelCase moduleName }}.topics.length > 0) {
-        commit('TOPICS', state.{{ camelCase moduleName }}.topics);
-        return Promise.resolve();
-        }
+export const {{ properCase moduleName }}Actions: I{{ properCase moduleName }}Actions = {
+  getTopics({ commit, state }: ActionContext<IState, IState>): Promise<any> {
+  if (state.{{ camelCase moduleName }}.topics.length > 0) {
+    commit('TOPICS', state.{{ camelCase moduleName }}.topics);
+    return Promise.resolve();
+  }
 
-        return axios.get('https://jsonplaceholder.typicode.com/posts')
-        .then((response: any) => {
-        commit('TOPICS', response.data);
-        })
-        .catch((e: Error) => {
-        commit('TOPICS_FAILURE', e);
-        });
-        },
-        };
+  return axios.get('https://jsonplaceholder.typicode.com/posts')
+    .then((response: any) => {
+      commit('TOPICS', response.data);
+    })
+    .catch((e: Error) => {
+      commit('TOPICS_FAILURE', e);
+    });
+  },
+};
