feat(components): add VueGridRow to existing grid system (#90)
closes #85

--- a/tools/generators/shared-component/component.spec.ts.hbs
+++ b/tools/generators/shared-component/component.spec.ts.hbs
@@ -11,7 +11,7 @@ describe('{{ properCase componentName }}.vue', () => {
                       {
                         localVue,
                         mocks: {
-                          $style
+                          $style,
                         },
                       },
                     );
