fix(pwa): add manifest.json to index.html

--- a/src/app/index.template.html
+++ b/src/app/index.template.html
@@ -27,6 +27,7 @@
   for (var file of chunk.files) {
   if (file.match(/\.(js|css)$/)) { %>
   <link rel="<%= chunk.initial?'preload':'prefetch' %>" href="<%= htmlWebpackPlugin.files.publicPath + file %>" as="<%= file.match(/\.css$/)?'style':'script' %>"><% }}} %>
+  <link rel="manifest" href="/manifest.json">
 </head>
 <body>
 <!--vue-ssr-outlet-->
