--- a/src/app/index.template.html
+++ b/src/app/index.template.html
@@ -1,35 +1,26 @@
 <!DOCTYPE html>
-<html lang="{{ htmlLang }}" data-vue-meta-server-rendered {{{ meta.inject().htmlAttrs.text() }}}>
+<html <% if (htmlWebpackPlugin.options.spa) { %>lang="en"<% } else { %>lang="{{ htmlLang }}" data-vue-meta-server-rendered {{{ meta.inject().htmlAttrs.text() }}}<% } %>>
 <head>
-  {{{ meta.inject().meta.text() }}}
-  {{{ meta.inject().title.text() }}}
-  {{{ meta.inject().link.text() }}}
-  {{{ meta.inject().style.text() }}}
-  {{{ meta.inject().script.text() }}}
-  {{{ meta.inject().noscript.text() }}}
+  <% if (!htmlWebpackPlugin.options.spa) { %>{{{ meta.inject().meta.text() }}} {{{ meta.inject().title.text() }}} {{{ meta.inject().link.text() }}} {{{ meta.inject().style.text() }}} {{{ meta.inject().script.text() }}} {{{ meta.inject().noscript.text() }}}<% } else { %><title>vue-starter</title><link rel="shortcut icon" href="/favicon.png" type="image/png" /><link rel="icon" href="/favicon.png" type="image/png" /><% } %>
   <meta charset="utf-8">
-  <title>vue-starter</title>
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, minimal-ui">
-  <meta name="theme-color" content="#2ecc71">
+  <meta name="theme-color" content="#17BEBB">
   <script>
     function loadAsyncStyleSheets() {
       for (var e = document.getElementsByTagName('head')[0], t = ['https://use.fontawesome.com/releases/v5.0.2/css/all.css'], s = 0; s < t.length; s++) {
-        var a = document.createElement('link'), l = document.createAttribute('rel'),
-          n = document.createAttribute('href');
+        var a = document.createElement('link'), l = document.createAttribute('rel'), n = document.createAttribute('href');
         l.value = 'stylesheet', n.value = t[s], a.setAttributeNode(l), a.setAttributeNode(n), e.appendChild(a);
       }
     }
-
     window.addEventListener('load', loadAsyncStyleSheets, !1);
-  </script>
-  <% for (var chunk of webpack.chunks) {
+  </script><% for (var chunk of webpack.chunks) {
   for (var file of chunk.files) {
   if (file.match(/\.(js|css)$/)) { %>
   <link rel="<%= chunk.initial?'preload':'prefetch' %>" href="<%= htmlWebpackPlugin.files.publicPath + file %>" as="<%= file.match(/\.css$/)?'style':'script' %>"><% }}} %>
   <link rel="manifest" href="/manifest.json">
 </head>
 <body>
-<!--vue-ssr-outlet-->
+<% if (htmlWebpackPlugin.options.spa) { %><div id="app"></div><% } else { %><!--vue-ssr-outlet--><% } %>
 </body>
 </html>
